# StockMarketSimulator

./: .gitignore  README.md  __init__.py  batch_output.prof  batch_runner.py  config.py  main.py  merge.js  merged.txt  profile_runner.py  pyproject.toml  requirements.txt  run_optimization.py  sms-gui
.github/workflows/: ci.yml
config/: configB.txt  configC.txt  configD.txt  config_exploration_2.txt
data/: CSV_FORMAT.md  data_fetcher.py
data/local_csv/: IVV.csv  QQQ.csv  _DJI.csv  _GSPC.csv  _IXIC.csv  _N225.csv
gui/: simulation_runner.py  visualizer.py
optimization/: parameter_sweeper.py  report_pdf.py
reports/Misc_index_sweep_10years_01052025/: report.txt
reports/Misc_index_sweep_15years_01052025/: report.txt
reports/Misc_index_sweep_20years_01052025/: config.txt  report.txt
reports/Misc_index_sweep_5years_01052025/: report.txt
reports/Strategy_QQQ_1_5years_07032025/: report.txt
reports/Strategy_QQQ_2_5years_07032025/: report.txt
reports/Strategy_QQQ_5years_06182025/: config.txt  report.txt
reports/Strategy_Sweep_1_10years_06202025/: report.txt
simulation/: execution.py  portfolio.py  simulator.py
src/stock_market_simulator/: config.py  (+2 more)
stock_market_simulator/: __init__.py
strategies/: base_strategies.py  momentum_breakout_strategy.py  rsi_strategy.py  sma_trading_strategy.py
tests/: test_cleanup_cache.py  test_config_parser.py  test_data_fetcher.py  test_execution.py  test_momentum_breakout_strategy.py  test_pdf_report.py  test_rsi_strategy.py  test_sma_trading_strategy.py
utils/: cleanup_cache.py  config_parser.py  pdf_report.py
(+84 files in other folders)
