[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_market_simulator"
description = "Trading simulation framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Unknown"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas>=1.0",
    "yfinance>=0.2",
    "matplotlib>=3.0",
    "tqdm>=4.0",
    "filelock>=3.0",
    "fpdf>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=6.0"]

[tool.setuptools.packages.find]
where = ["."]
namespaces = true

[tool.setuptools]
package-dir = {"stock_market_simulator" = ""}

[tool.setuptools.dynamic]
version = {attr = "stock_market_simulator.__version__"}
